--- a/scss/layouts/_gallery-section.scss
+++ b/scss/layouts/_gallery-section.scss
@@ -1,6 +1,6 @@
 .gallery{
 
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 
 
     &__title{
@@ -8,16 +8,24 @@
     }
 
     &__text{
-        width: 574px;
+    max-width: 591px;
         text-align: center;
         margin: 0 auto 44px;
     }
 
     &__photo-box{
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 33px 44px;
+        margin-bottom: 44px;
+        
+
+        @media screen and (min-width:$bp-desktop) {
+            flex-wrap: wrap; 
+            flex-direction: row;
+        }
     }
 
     &__button{
@@ -33,4 +41,26 @@
             margin: 0 auto;
             cursor: pointer;
     }
+
+    &__item{
+        border-radius: 12px;
+        display: none;
+
+        @media screen and (min-width:$bp-desktop) {
+        display: block;
+
+        }        
+    }
+
+    &__item-mbl{
+        display: block;
+        border-radius: 12px;
+
+        @media screen and (min-width:$bp-desktop) {
+        display: none;    
+        } 
+
+    }
+
+        
 }
