--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -6,4 +6,10 @@
     --secondary-black: #000000;
     --secondary-gray: #5C5C5C;
     --follow-color: #343434;
+    --follow-color-mbl:#1E1E1E;
 }
+
+
+$bp-desktop:1200px;
+$bp-tablet:770px;
+$bp-mobile:480px;
