--- a/scss/componets/_advantages-cards.scss
+++ b/scss/componets/_advantages-cards.scss
@@ -2,9 +2,17 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-    width: 270px;
-    height: 196px;
-    margin-bottom: 150px;
+    
+    padding: 0;
+
+    @media screen and (min-width:$bp-tablet) {
+        padding: 54px 0;
+    }
+
+    &__item{
+        width: 270px;
+            height: 196px;
+    }
 
     &__icon{
         fill: var(--secondary-green);
