--- a/scss/layouts/_follow-section.scss
+++ b/scss/layouts/_follow-section.scss
@@ -1,14 +1,35 @@
 .follow-section{
-    margin-bottom: 180px;
+    margin-bottom: 100px;
+    background-color: var(--follow-color-mbl);
+    height: 788px;
+
+    @media screen and (min-width:$bp-desktop) {
+        background-color: transparent;
+        height: auto;
+        margin-bottom: 100px;
+    }
 
     &__container{
         display: flex;
-        width: 1220px;
-        height: 370px;
-        // box-shadow: 0 4px 31px 0 rgba(0, 0, 0, 0.15);
-        background-color: var(--follow-color);
-        border-radius: 20px;
-        border: 1px solid var(--follow-color);
+        align-items: center;
+        border-radius: 0;
+        
+        flex-direction: column;
+        width: 510px;
+            height: 568px;
+            margin: 0 auto;
+            text-align: center;
+
+        @media screen and (min-width:$bp-desktop) {
+            width: 1220px;
+            height: 370px;
+            text-align: left;
+            margin: 0;
+            flex-direction: row;
+            border-radius: 20px;
+            background-color: var(--follow-color);
+            border: 1px solid var(--follow-color);
+        }
         
 
     }
@@ -35,10 +56,32 @@
     }
 
     &__text-box{
-        padding: 78px 94px;
+        
+        padding: 104px 25px 0 25px;
+        margin-bottom: 106px;
+
+        @media screen and (min-width:$bp-desktop) {
+            padding: 78px 94px;
+            margin-bottom: 0;
+        }
     }
 
     &__img{
+        display: none;
+
+        @media screen and (min-width:$bp-desktop) {
+            display: block;
         border-radius: 0 0 20px 0;
+        width: 585px;
+            height: 364px;
+        
+    }}
+
+    &__img-mbl{
+        display: block;
+
+        @media screen and (min-width:$bp-desktop) {
+            display: none;
+        }
     }
 }
