--- a/scss/layouts/_partners.scss
+++ b/scss/layouts/_partners.scss
@@ -10,7 +10,7 @@
     }
 
     &__text{
-        width: 574px;
+        
         text-align: center;
         margin: 0 auto;
     }
@@ -19,10 +19,16 @@
 
     &__icons-partners{
         display: flex;
-        gap: 74px;
+        gap: 50px;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         margin-bottom: 50px;
+        flex-wrap: wrap;
+
+        @media screen and (min-width:$bp-tablet) {
+            gap: 74px; 
+            justify-content: center;
+        }
 
     }
 
@@ -31,8 +37,8 @@
             font-family: 'Rubik', sans-serif;
             font-weight: 500;
             font-size: 18px;
-            width: 178px;
-            height: 65px;
+            width: 176px;
+            height: 52px;
             background-color: transparent;
             border: 1px solid var(--light-main-color);
             color: var(--light-main-color);
