--- a/scss/layouts/_sectiom.scss
+++ b/scss/layouts/_sectiom.scss
@@ -5,6 +5,7 @@
         font-size: 52px;
         line-height: 1.2;
         text-align: center;
+        text-transform: uppercase;
         
     }
 }
