--- a/scss/layouts/_testimonials-section.scss
+++ b/scss/layouts/_testimonials-section.scss
@@ -1,7 +1,12 @@
 .testimonials{
+    margin-bottom: 100px;
 
 
     &__title{
-        margin-bottom: 60px;
+        margin-bottom: 50px;
+
+        @media screen and (min-width:$bp-tablet) {
+            margin-bottom: 60px;  
+        }
     }
 }
