--- a/scss/utils/_base.scss
+++ b/scss/utils/_base.scss
@@ -1,26 +1,26 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     color: var(--light-main-color);
     background-color: var(--dark-background);
-    font-family: 'Rubik' , sans-serif ;
+    font-family: 'Rubik', sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 1.5;
 }
 
-ul{
+ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     font-style: normal;
 }
 
-a{
+a {
     text-decoration: none;
     color: var(--light-main-color);
 }
@@ -31,7 +31,14 @@ h3,
 h4,
 h5,
 h6,
-p{
-margin: 0;
-padding: 0;
+p {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
 }
