--- a/scss/layouts/_follow-section.scss
+++ b/scss/layouts/_follow-section.scss
@@ -15,12 +15,13 @@
         border-radius: 0;
         
         flex-direction: column;
-        width: 510px;
+        max-width: 510px;
             height: 568px;
             margin: 0 auto;
             text-align: center;
 
         @media screen and (min-width:$bp-desktop) {
+            max-width: none;
             width: 1220px;
             height: 370px;
             text-align: left;
